--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -5,9 +5,8 @@
 {% block content %}
 <div class="mr-2 ml-2">
     <div class="max-w-2xl mx-auto p-6 bg-white shadow-md rounded mt-10">
-        <h2 class="text-2xl font-bold mb-6">Welcome to YourHR</h2>
-        <p>YourHR is a job search service that aims to help job seekers find the ideal job roles based on
-            their qualifications and preferences.</p>
+        <h2 class="text-2xl font-bold mb-6">welcome to our website</h2>
+        <p>Our platform uses face recognition to ensure each user has a unique account. During registration, a profile photo is securely stored. When someone attempts to sign up, our system compares their facial features with those in the database, preventing multiple accounts for the same person. This protects against fraud and maintains the integrity of our user base.</p>
     </div>
 </div>
 {% endblock %}
